# gabelscience

./: .gitignore  config.py  nearest_to_dem.tif.lyrx  pct_start.tif.lyrx  pyproject.toml  pyvenv.cfg  request_testing.ipynb  requirements.txt  setup.cfg  setup.py
gabelscience/: bfe_cleaner.py  clip_raster.py  convert_wse_to_pct_ann_chance.py  date_updated.yaml  define_all_projections.py  fill_a_raster.py  get_DFIRM_state.py  get_NFHL.py  json_requests.py  json_to_dataframe.py  mask_rasters.py  mosaic_rasters.py  next_highest_next_lowest.py  perc_chance_grids.py  perc_chance_numpy.py  process_MIP_QA_Report.py  query_esri_map.py  raster_tiling.py  shrinkwrap.py  simplify.py  simplify_framework.py
gabelscience/mapbox_metadata/: account_info.json  mapbox_sources.json  mapbox_tilekey.env  tileset_recipe_template.json
gabelscience/requests/: national_levee_database.py
gabelscience/test_folder/: bounds_path_0.shp  bounds_path_0.shx  bounds_path_1.dbf  bounds_path_1.shp  bounds_path_1.shx
references/: FEMA_DataSets.csv  FEMA_DataSets.xlsx  FEMAtableClasses.py  dicts.py  fema_field_definitions.py  fema_tables.py  fema_tbl_atts.py  field_types.py  online_links.py  reproject_clip.py
references/CID/: NfipCommunityStatusBook.json  fema_nfip_communities.xlsx
references/ref_data/: State_Bounds_Census.dbf  State_Bounds_Census.sbn  State_Bounds_Census.sbx  State_Bounds_Census.shp.xml
src/d00_utils/: bounds_convert.py  check_crs_from_pathlist.py  check_crs_match.py  define_all_projections.py  epsg_gets.py  file_typing.py  (+15 more)
test_data/: 3417_extent.html  create_test_arrays.py
(+45 files in other folders)
