# inside setup.cfg:

[metadata]
name = gabelscience
version = 0.6.0
author = Kevin Gabelman
author_email = kevin.gabelman@gabelscience.com
description = Python package for performing spatial analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = yourprojecturl.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:
package_dir =
    =gabelscience

[options.packages.find]